# music_group_store_api

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  main.py  pyproject.toml  seed.py
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  rate_limit.py  security.py
app/domain/catalog/: models.py  repository.py  router.py  schemas.py  service.py
app/domain/localization/: models.py  repository.py  router.py  schemas.py  service.py
app/domain/music/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  storage.py
app/domain/system/: router.py
app/domain/users/: auth_router.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/infrastructure/: base.py  cache.py  session.py
deploy/: nginx.music.conf.example
docs/: api-usage.md  music-api-frontend.md
migrations/: env.py
migrations/versions/: 05456137b11c_add_catalog_and_localization.py  334110327a2d_add_slug_to_products.py  51921ec5c6b0_init_users_domain.py  73316b48f694_add_product_images.py  9a7d3c2e1f40_add_music_domain.py  d02c9484a41c_add_in_stock_to_product.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_config.py  test_localization.py  test_music.py  test_system.py
